fix(img): due to the fact that the inline-size was not set for img, a overflow-x appeared (fixed)

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -41,3 +41,7 @@ a {
   font-size: inherit;
   line-height: inherit;
 }
+
+img {
+  inline-size: 100%;
+}
